# MasterThesisAnalysis

./: .gitignore  pyproject.toml  readme.md  run_experiments.sh
create_groups/: create_group_weights.py  create_prs_groups.py  create_random_groups.py  create_topk_groups.py  dataset.py  group_generator.py  similarity_sampler_tools.py
datasets/kgrec/evaluation_results/: kgrec_longterm_results.csv  kgrec_uniform_results.csv  kgrec_weighted_results.csv
datasets/kgrec/groups/: prs_2_se=1_noc=1000.csv  prs_2_se=4_noc=1000.csv  prs_3_se=1_noc=1000.csv  prs_3_se=4_noc=1000.csv  prs_4_se=1_noc=1000.csv  prs_4_se=4_noc=1000.csv  prs_6_se=1_noc=1000.csv  prs_6_se=4_noc=1000.csv  (+2 more)
evaluation/: evaluation_longterm.ipynb  evaluation_uniform.ipynb  evaluation_utils.py  evaluation_weighted.ipynb
experiments/: EPFuzzDHondt.ipynb  FuzzDHondt.ipynb  GFAR.ipynb  __init__.py  greedy_algorithms.ipynb  run_algorithms.py  run_longterm_algorithms.py  run_uniform_algorithms.py  run_weighted_algorithms.py  xpo.ipynb
experiments/algorithms/: GFAR.py  XPO.py  commons.py  dhondt_direct_optimize.py  exactly_proportional_fuzz_dhondt.py  greedy_algorithms.py
experiments/notebooks/: EPFuzzDHondt.ipynb  FuzzDHondt.ipynb  GFAR.ipynb  XPO.ipynb  evaluation.ipynb  greedy_algorithms.ipynb
gather_datasets/: dataset.py  download_and_transform.py  kgrec.py  lastfm.py  movie_lens.py  netflix.py  spotify.py  utils.py
gather_datasets/datasets/: kgrec.py  lastfm.py  movie_lens.py  netflix.py  spotify.py
matrix_factorization/: ALS_matrix_factorization.py  matrix_factorization.py
notebooks/: group_generation.ipynb  kgrec_analysis.ipynb  lastfm_analysis copy.ipynb  lastfm_analysis.ipynb  matrix_factorization.ipynb  matrix_factorization_implicit.ipynb  movie_lens_analysis.ipynb  netflix_analysis.ipynb  ratings_analysis.ipynb  spotify_analysis.ipynb  test_datasets.ipynb  users_similarity.ipynb  weeplaces_analysis.ipynb
notebooks_experiments/: matrix_factorization.ipynb
(+1009 files in other folders)
