[tool.poetry]
name = "thesis_analysis"
version = "0.1.0"
description = ""
authors = ["Ladislav Malecek <malecek.ladislav@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.9.13"
pandas = "^1.4"
matplotlib = "^3.5"
numpy = "^1.22"
requests = "^2.27"
tqdm = "^4.64"
seaborn = "^0.11"
scipy = "^1.8.0"
ray = "^1.13.0"
more-itertools = "^8.13.0"
scikit-learn = "^1.1.1"
implicit = "^0.6.1"


[tool.poetry.dev-dependencies]
notebook = { version="^6.4.11", optional = true }
jupyter = { version="^1.0.0", optional = true }
ipykernel = { version="^6.13", optional = true }

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
all = ["notebook", "jupyter", "ipykernel"]